[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://Background/Red.png" type="Texture" id=2]
[ext_resource path="res://ARCADECLASSIC.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Hexagon.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameOver.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 3 )

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 1 )
Hexagon = ExtResource( 4 )

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="RedBackground" type="Sprite" parent="."]
position = Vector2( 399.253, 300 )
scale = Vector2( 800, 600 )
texture = ExtResource( 2 )

[node name="FinalScore" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LetterTimer" type="Timer" parent="."]
wait_time = 0.33

[node name="Holder" type="Node2D" parent="."]
z_index = 2

[node name="TheEnd" type="Label" parent="Holder"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 2.0
margin_top = 239.0
margin_right = 800.0
margin_bottom = 369.0
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="LetterTimer" to="." method="_on_LetterTimer_timeout"]
